src/styles/footer.scss
@import 'media-queries';
@import 'typefaces';

.footer {
  &::before {
    content: ' ';
    display: block;
    height: 2px;
    background-color: white;
    width: 75%;
    margin: 2.6rem auto;

    @include device-WIDER-than(mobile) {
      content: none;
    }
  }
}

.horizontal-list {
  font-weight: 600;
  letter-spacing: -0.12px;
  text-align: center;
  line-height: 1.1;
  font-size: 0.84rem;
  padding: 0 1rem;
  margin: 0;
  margin-bottom: 4.2rem;

  width: 100%;
  text-transform: uppercase;
  list-style-type: none;
  color: white;

  @include device-WIDER-than(mobile) {
    margin: 0;
    height: 2.1rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 1rem;
    font-size: 0.65rem;

    background-image: url('../images/background.png');
    background-size: cover;
    background-position: 50% 100%;
  }
}

.horizontal-list_item {
  display: inline-block;
  margin: 0;

  @include device-NARROWER-than(mobile) {
    &.hide-on-mobile {
      display: none;
    }
  }
}

